{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "037f7d2c-0c20-4bdb-ad41-6ac2853583a3",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "8f701a46-48d4-46d8-855b-9ad883b07974",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "312d5521-a693-48e8-b257-a2a94d8865b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotationY",
                    "type": "Value",
                    "id": "8364611c-24ae-4cf2-b82b-b721f7fc801c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "69b46c6f-77e0-4954-871c-16d99635d5f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotationX",
                    "type": "Value",
                    "id": "4ded78af-64eb-4403-b628-d1aaab855335",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "47bc5691-5d5b-493b-a00d-939ac40c4b48",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4dfad130-89be-448b-8ac6-3ede8fdbc952",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "aa677384-041f-4a32-aa2d-bbc38e8edcc1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c28ab85b-f595-4759-8c8e-f32484deef46",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cfe539f5-8c07-42f5-8eef-a1730806bf8b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "562f5b70-3676-4295-8d69-085b0fac7c74",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "621d732e-0d82-411e-be17-3ee1f89f5e5c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0fa2d694-a0a8-4650-9e9b-3d70fd67a666",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9203ab7-365f-44a1-b67e-dc3c8153d323",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationX",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}